--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                   <span>arXiv</span>
                 </a>
               </span>
+              <span class="link-block">
+                <a href="https://github.com/Jordylek/conformal-decision"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>arXiv</span>
+                </a>
+              </span>
               <!-- Code Link. -->
 <!--               <span class="link-block">
                 <a href=""
