--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="./static/pdf/submission.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -71,7 +71,7 @@
                   </span>
                   <span>Paper</span>
                 </a>
-              </span>
+              </span> -->
               <span class="link-block">
                 <a href="https://arxiv.org/abs/2310.05921"
                    class="external-link button is-normal is-rounded is-dark">
@@ -87,7 +87,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>Code</span>
                 </a>
               </span>
               <!-- Code Link. -->
